<resources>
    <string name="app_name">Trắc Nghiệm</string>
    <string name="drawer_header">Drawer Header</string>
    <string name="home">Home</string>
    <string name="mon_toan">Toán Học</string>
    <string name="mon_hoa">Hóa Học</string>
    <string name="mon_ly">Vật Lý</string>
    <string name="drawer_menu">Trắc Nghiệm</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="toan_fragment">Toan Fragment</string>
    <string name="hoa_fragment">Hoa Fragment</string>
    <string name="ly_fragment">Ly Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="scrSlide_txtView_test">Slide view</string>
</resources>