<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@android:drawable/btn_radio"
        android:title="@string/home" />
    <item android:title="@string/drawer_menu">
        <menu>
            <item
                android:id="@+id/mon_toan"
                android:icon="@android:drawable/btn_star_big_on"
                android:title="@string/mon_toan" />
            <item
                android:id="@+id/mon_ly"
                android:icon="@android:drawable/presence_online"
                android:title="@string/mon_ly" />
            <item
                android:id="@+id/mon_hoa"
                android:icon="@android:drawable/presence_invisible"
                android:title="@string/mon_hoa" />

        </menu>

    </item>
</menu>